--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,8 @@ body,html {
     display: grid;
     grid-template-rows: 70px 30px 6fr 1fr;
     grid-template-columns: repeat(3, 1fr);
+
+    height: calc(100vh - 3px);          /* Add this to make footer appear at bottom of page */
 }
 
 #title-banner {
@@ -26,7 +28,10 @@ body,html {
     justify-self: center;
     align-self: center;
 
+    padding: 3px 13px 3px 13px;
+
     border: solid 1px blue;
+    border-radius: 15px;
 }
     .tabs:hover {
         background-color: aliceblue;
@@ -37,7 +42,7 @@ body,html {
 #content-page {
     grid-column: 1/4;
 }
-#container-home {
+#container-home, #container-contacts {
     display: grid;
     gap: 20px;
     justify-content: center;
@@ -50,6 +55,12 @@ body,html {
 }
     .content-class {
         font-size: 1.5em;
+    }
+    .content-class2 {
+        font-size: 0.9em;
+
+        justify-self: center;
+        align-self: center;
     }
 #container-menu {
     display: grid;
